# py-project-basic

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: __main__.py
my_app/: __main__.py
tests/: test_a.py  test_abc.py
