[project]
name = "py-project-basic"
version = "0.2.0"
description = "Minimal template for a Python Poetry app"
authors = [
  { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^8.4.2"
mypy = "^1.18.2"

[tool.poetry]
packages = [{ include = "app" }]

[project.scripts]
app = "app.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  "F",  # Pyflakes
  "W",  # pycodestyle warnings
  "I",  # isort
  "D",  # pydocstyle (docstring conventions)
  "UP", # pyupgrade
]
